code/java/StandardDatafeed/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Standard Datafeed client library for Java

[![API Version](https://img.shields.io/badge/api-v2.1.0-blue)](https://developer.factset.com/api-catalog/standard-datafeed-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/standarddatafeed/2.0.0)](https://central.sonatype.com/artifact/com.factset.sdk/standarddatafeed/2.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

[The Standard DataFeed (SDF) Download API](https://www.factset.com/marketplace/catalog/product/factset-standard-datafeed-download-api) 
provides an alternative method for users to request and retrieve SDF packages (schemas & bundles). 
This service is not a direct replacement and does not have 100% feature parity with the Loader Application. 
This API provides an alternative for users who are unable to utilize the Loader application due to the following reasons:

* Inability to install 3rd party executables due to Corporate Security policies.

* Inability to utilize the Loader application due to limitations or restrictions with the environment used to consume Standard Datafeed.

* Clients who are utilizing existing delivery methods like FTP, who may want to use a more secure & modern solution.

This API allows users to retrieve

* Both SDF and the QFL (Quant Factor Library (Factor Family & Factor Groups)) packages they have subscriptions for, with data available since January 1, 1995.

Additional parameters are available to filter requests to get the exact files users are looking for.

QFL data is delivered through Content API & Bulk Data API (SDF API).

* Content API: Provides direct access to FactSet-hosted QFL data. Suitable for interactive, ad hoc QFL requests. Constraints on large extracts. Costs are based on consumption, i.e. more calls can result in more costs.

* Bulk Data API: Provides access to download locations of zip files for client download. Suitable for production processes within a client environment. Cost is based on the use case and fixed unless scope changes (same as other SDFs).

Please find all the content-related comprehensive documentation [here](https://my.apps.factset.com/oa/pages/15222).


This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.1.0
- SDK version: 2.0.0
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>standarddatafeed</artifactId>
  <version>2.0.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:standarddatafeed:2.0.0"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.StandardDatafeed.*;
import com.factset.sdk.StandardDatafeed.auth.*;
import com.factset.sdk.StandardDatafeed.models.*;
import com.factset.sdk.StandardDatafeed.api.SchemaApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class SchemaApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        SchemaApi apiInstance = new SchemaApi(defaultClient);
        try {
            ListSchema result = apiInstance.getListSchemaswithoutwithooutRequiredParameters();
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling SchemaApi#getListSchemaswithoutwithooutRequiredParameters");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.StandardDatafeed.*;
import com.factset.sdk.StandardDatafeed.api.SchemaApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

SchemaApi apiInstance = new SchemaApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.StandardDatafeed.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/bulk-documents/sdf/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SchemaApi* | [**getListSchemaswithoutwithooutRequiredParameters**](docs/SchemaApi.md#getListSchemaswithoutwithooutRequiredParameters) | **GET** /list-schemas | List of Standard DataFeed (SDF) schemas.
*SchemaApi* | [**getSchemaDetails**](docs/SchemaApi.md#getSchemaDetails) | **GET** /schema-details | Schema Details.
*SdfAndQflContentLibraryApi* | [**getListFiles**](docs/SdfAndQflContentLibraryApi.md#getListFiles) | **GET** /list-files | Returns delta &amp; full files for the schemas.
*SdfAndQflContentLibraryApi* | [**gethistoricalFiles**](docs/SdfAndQflContentLibraryApi.md#gethistoricalFiles) | **GET** /historical-files | Returns full historic data of specified schema and bundle.


## Documentation for Models

 - [ErrorExample](docs/ErrorExample.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [HistoricalFile](docs/HistoricalFile.md)
 - [HistoricalFileObject](docs/HistoricalFileObject.md)
 - [HistoricalFileObjectObject](docs/HistoricalFileObjectObject.md)
 - [ListFile](docs/ListFile.md)
 - [ListFileObject](docs/ListFileObject.md)
 - [ListFileObjectObject](docs/ListFileObjectObject.md)
 - [ListSchema](docs/ListSchema.md)
 - [ListSchemaObject](docs/ListSchemaObject.md)
 - [Meta](docs/Meta.md)
 - [Pagination](docs/Pagination.md)
 - [SchemaDetail](docs/SchemaDetail.md)
 - [SchemaDetailObject](docs/SchemaDetailObject.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
